--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_API_URL=https://8f4k87jsc0.execute-api.us-east-1.amazonaws.com/lks
-VITE_WEBSOCKET_URL=wss://l0ja1xkuui.execute-api.us-east-1.amazonaws.com/prod/
-VITE_API_TOKEN=aa18d7481ceab43adfca8d4975cf96d8
+VITE_BASE_API_URL=https://pbj0pimup2.execute-api.us-east-1.amazonaws.com/lks
+VITE_WEBSOCKET_URL=wss://rf5sbhwqbd.execute-api.us-east-1.amazonaws.com/prod/
+VITE_API_TOKEN=7ebc155057d0c7405b2794706b0c6af7
 VITE_DEVICE_ID=frontEnd-001
