--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_API_URL=https://pbj0pimup2.execute-api.us-east-1.amazonaws.com/lks
+VITE_BASE_API_URL=https://d9c803c2dos33.cloudfront.net
 VITE_WEBSOCKET_URL=wss://rf5sbhwqbd.execute-api.us-east-1.amazonaws.com/prod/
-VITE_API_TOKEN=66f5010d7009e6d68c8114998a07d19b
-VITE_DEVICE_ID=frontEnd-005
+VITE_API_TOKEN=13ef7285ca846fd9ae36cb160f6cc04e
+VITE_DEVICE_ID=frontEnd-006
