--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_BASE_API_URL=https://pbj0pimup2.execute-api.us-east-1.amazonaws.com/lks
-VITE_WEBSOCKET_URL=wss://rf5sbhwqbd.execute-api.us-east-1.amazonaws.com/prod/
-VITE_API_TOKEN=a35b4843952d03fa702193807636673d
-VITE_DEVICE_ID=frontEnd-007
+VITE_WEBSOCKET_URL=wss://w9z11i7uoi.execute-api.us-east-1.amazonaws.com/prod/
+VITE_API_TOKEN=1fffe7d513af375c60f02a378df39750
+VITE_DEVICE_ID=frontEnd-001
