--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_API_URL=https://d1b9vmi23jzj5o.cloudfront.net
+VITE_BASE_API_URL=https://dw3kk18h9b2e2.cloudfront.net
 VITE_WEBSOCKET_URL=wss://w9z11i7uoi.execute-api.us-east-1.amazonaws.com/prod/
 VITE_API_TOKEN=1fffe7d513af375c60f02a378df39750
 VITE_DEVICE_ID=frontEnd-001
