--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_API_URL=https://dw3kk18h9b2e2.cloudfront.net
-VITE_WEBSOCKET_URL=wss://w9z11i7uoi.execute-api.us-east-1.amazonaws.com/prod/
-VITE_API_TOKEN=1fffe7d513af375c60f02a378df39750
+VITE_BASE_API_URL=https://d3txxt9f6wsxe9.cloudfront.net
+VITE_WEBSOCKET_URL=wss://f9pgljjm8f.execute-api.us-east-1.amazonaws.com/dev/
+VITE_API_TOKEN=fe3217a7d5b1c0e77d6dca33c2f6967c
 VITE_DEVICE_ID=frontEnd-001
