--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_API_URL=https://d3txxt9f6wsxe9.cloudfront.net
-VITE_WEBSOCKET_URL=wss://f9pgljjm8f.execute-api.us-east-1.amazonaws.com/dev/
-VITE_API_TOKEN=fe3217a7d5b1c0e77d6dca33c2f6967c
+VITE_BASE_API_URL=https://d26lm27nlmdz1j.cloudfront.net
+VITE_WEBSOCKET_URL=wss://jrrzoaq20h.execute-api.us-east-1.amazonaws.com/dev/
+VITE_API_TOKEN=caddb9a85346d8b9d56636795b6a9e7e
 VITE_DEVICE_ID=frontEnd-001
