--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_API_URL=https://d26lm27nlmdz1j.cloudfront.net
-VITE_WEBSOCKET_URL=wss://jrrzoaq20h.execute-api.us-east-1.amazonaws.com/dev/
-VITE_API_TOKEN=caddb9a85346d8b9d56636795b6a9e7e
+VITE_BASE_API_URL=https://d1yie2yb1vdxm8.cloudfront.net
+VITE_WEBSOCKET_URL=wss://ezj8q4f97h.execute-api.us-east-1.amazonaws.com/dev/
+VITE_API_TOKEN=a1ea412f7ee1c383a402e5e68fbb940c
 VITE_DEVICE_ID=frontEnd-001
