--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_API_URL=https://d1yie2yb1vdxm8.cloudfront.net
-VITE_WEBSOCKET_URL=wss://ezj8q4f97h.execute-api.us-east-1.amazonaws.com/dev/
-VITE_API_TOKEN=a1ea412f7ee1c383a402e5e68fbb940c
+VITE_BASE_API_URL=https://d38mzw188ooh49.cloudfront.net
+VITE_WEBSOCKET_URL=wss://k7fu4m9ht8.execute-api.us-east-1.amazonaws.com/dev/
+VITE_API_TOKEN=b15df3b4b0fcda6c7e315ceb89137c1e
 VITE_DEVICE_ID=frontEnd-001
