--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_API_URL=https://d38mzw188ooh49.cloudfront.net
-VITE_WEBSOCKET_URL=wss://k7fu4m9ht8.execute-api.us-east-1.amazonaws.com/dev/
-VITE_API_TOKEN=b15df3b4b0fcda6c7e315ceb89137c1e
+VITE_BASE_API_URL=https://no5h7s29tg.execute-api.us-east-1.amazonaws.com/lks
+VITE_WEBSOCKET_URL=wss://v8hpkw3p1a.execute-api.us-east-1.amazonaws.com/dev/
+VITE_API_TOKEN=85341bae2e0c740a8cf48df1b9163b73
 VITE_DEVICE_ID=frontEnd-001
