--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_API_URL=https://no5h7s29tg.execute-api.us-east-1.amazonaws.com/lks
+VITE_BASE_API_URL=https://d2iwicke7zb3vf.cloudfront.net
 VITE_WEBSOCKET_URL=wss://v8hpkw3p1a.execute-api.us-east-1.amazonaws.com/dev/
 VITE_API_TOKEN=85341bae2e0c740a8cf48df1b9163b73
 VITE_DEVICE_ID=frontEnd-001
