--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_API_URL=https://d2iwicke7zb3vf.cloudfront.net
-VITE_WEBSOCKET_URL=wss://v8hpkw3p1a.execute-api.us-east-1.amazonaws.com/dev/
-VITE_API_TOKEN=85341bae2e0c740a8cf48df1b9163b73
+VITE_BASE_API_URL=https://dssaff2q400rc.cloudfront.net
+VITE_WEBSOCKET_URL=wss://pl6ki6nar6.execute-api.us-east-1.amazonaws.com/dev
+VITE_API_TOKEN=dcbb2e46ee154baf099e3f7bc2f4807d
 VITE_DEVICE_ID=frontEnd-001
